--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,6 +14,7 @@
 		<div class="hello-title" text-wrap>
 			<h1>ABC Corp Inc.</h1>
 			50 Market Street, San Francisco, California 94103, United States
+			<div class="user-info">{{userInfo.firstname}} {{userInfo.lastname}}</div>
 		</div>
 	</div>
 
